Source/WebCore/Modules/contact-picker/ContactInfo.h
@@ -25,6 +25,9 @@
 
 #pragma once
 
+#include <wtf/Forward.h>
+#include <wtf/Vector.h>
+
 namespace WebCore {
 
 struct ContactInfo {
